<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">IRBU</string>
    <string name="txtBajaUTPL">Baja de la UTPL</string>
    <string name="txtSubeUTPL">Sube a la UTPL</string>
    <string name="txtSubeBajaUTPL">Sube y baja de la UTPL</string>
    <string name="txtTituloTipoRecorrido">Seleccionar un tipo de recorrido:</string>
    <string name="txtTituloHora">Seleccionar la hora del recorrido:</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="txtTitutloApp">(Información de Rutas de los Buses de la UTPL)</string>
    <string name="txtMapa">Mapa</string>
    <string name="txtBuscarRuta">Buscar ruta</string>
    <string name="txtBuscarRutaHoraSector">Buscar ruta por hora</string>
    <string name="txtListaRutas">Lista de Rutas</string>
    <string name="txtAyuda">Ayuda</string>
    <string name="txtTituloInfoParadas">Información de Parada</string>
    <string name="txtDireccion">Dirección:</string>
    <string name="txtReferencia">Referencia:</string>
    <string name="txtCoordenadas">Coordenadas Geográficas:</string>
    <string name="txtLatitud">Latitud:</string>
    <string name="txtLongitud">Longitud:</string>
    <string name="txtLoginEva">Entorno Virtual de Aprendizaje</string>
    <string name="txtDatosEva">Obtener sus datos del sistema EVA</string>
    <string name="txtIngresar">Ingresar</string>
    <string name="txtUsuario">Usuario</string>
    <string name="txtClave">Clave:</string>
    <string name="txtInformacionUsuario">Información de Usuario</string>
    <string name="txtNombre">Nombre:</string>
    <string name="txtCI">Cédula:</string>
    <string name="txtMail">Correo Electrónico:</string>
    <string name="txtPeriodoAcademico">Periodo Académico:</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtGuardarParada">Guardar como parada preferida:</string>
    <string name="txtInformacionEstudiante">Información Estudiante</string>
    <string name="txtInformacion">Información:</string>
    <string name="txtTituloParadasAproximadas">Paradas Aproximadas</string>
    <string name="txtTituloInfoEstudiante">Información Usuario</string>
    <string name="txtInfoParadaFrecuente">Información Parada Frecuente</string>
    <string name="txtTitutloInfoCasaEstudiante">Información Domicilio</string>
    <string name="btnGraficarParada">Graficar Parada</string>
    <string name="btnGraficarCasa">Graficar Domicilio</string>
    <string name="txtUTPL">Universidad Técnica Particular de Loja</string>
    <string name="txtRutasHorarioParada">Ver rutas y horarios de la parada</string>
    <string name="txtListaRutasHorarios">Lista de Rutas y Horarios</string>
    <string name="txtNombreAutor">Christian Mora</string>
    <string name="txtAutor">Autor:</string>
    <string name="txtMailCM">cfmora@utpl.edu.ec</string>
    <string name="txtNotificarProblemas">Notificar Problemas de la App</string>
    <string name="txtProyecto">Proyecto:</string>
    <string name="txtDescripcionProyecto">Este proyecto fué desarrollado bajo la modalidad de tema de tesis de la Escuela de Ciencias de la Computación, tutelado por el ingeniero Jorge López dentro de la Universidad Técnica Particular de Loja, el código de esta aplicación es totalmente libre y puede ser utilizado como referencia para otros proyectos, los detalles se pueden encontrar en:</string>
    <string name="txtLinkGoogleCode">http://code.google.com/p/irbu-lod/</string>
    <string name="txtGuiaRapida">Guía Rápida:</string>
    <string name="txtGuiaIntroduccion1">Esta aplicación permite a los estudiantes y personal de la UTPL tener la información de las rutas de los buses que prestan este servicio dentro de este establecimiento, de una manera ágil y al alcance de la mano.</string>
    <string name="txtGuiaIntroduccion2">Se permiten busquedas de rutas dependiendo del tipo de recorrido que realizan los buses, información de paradas, utilización de GPS para ver paradas cercanas a un punto, guardado de información del estudiante como parada frecuente y coordenadas de la casa.</string>
    <string name="txtGuiaIntroduccion3">La utilización de la aplicación es bastante sensilla solo requiere ingresar los parámetros de las rutas que se quiere buscar y de alli solo pulsar en los iconos para ver la información que contiene.</string>
    <string name="txtGuiaIntroduccion4">Al momento de autenticarse en el EVA y obtener la información de parada y casa, estos datos pemanecen accesibles a través de esta aplicación hasta cerrar la sesión, esta puede ser cerrada simplemente con entrar a esta página de ayuda, para comprobarlo si ya ingresamos con el usuario y la clave e ingresamos a esta página de ayuda y volvemos a ingresar a información del estudiante nos pedirá que ingresemos nuevamente los datos de autenticación.</string>
    <string name="txtGuiaConfiguracion">En este  lugar se puede hacer un cambio sobre el servidor que se quiere consultar por las rutas.</string>
    <string name="txtConfiguracion">Configuración</string>
    <string name="txtServidor">Servidor:</string>
    <string name="txtPuerto">Puerto:</string>
</resources>
