<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/txtTituloTipoRecorrido" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RadioGroup
        android:id="@+id/rgTipoRecorrido"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbBajaUtpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txtBajaUTPL" />

        <RadioButton
            android:id="@+id/rbSubeUtpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSubeUTPL" />

        <RadioButton
            android:id="@+id/rbBajaSubeUtpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSubeBajaUTPL" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnBuscar_TR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btnBuscar" />

        <Button
            android:id="@+id/btnCancelar_TR"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

    </LinearLayout>

</LinearLayout>